unpackaged/main/default/objects/HONORARIOS_POR_RECUPERACION__c/HONORARIOS_POR_RECUPERACION__c.object-meta.xml
<CustomObject>
    <label>HONORARIOS POR RECUPERACION</label>
    <nameField>
        <label>Nombre de HONORARIOS COBRADOS</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HONORARIOS POR RECUPERACION</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>