unpackaged/main/default/objects/HONORARIOS_POR_RECUPERACION__c/fields/Asunto__c.field-meta.xml
<CustomField>
    <fullName>Asunto__c</fullName>
    <label>Asunto</label>
    <referenceTo>Asunto__c</referenceTo>
    <relationshipLabel>GASTOS DE JUICIO</relationshipLabel>
    <relationshipName>GASTOS_DE_JUICIO1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>