unpackaged/main/default/objects/HONORARIOS_POR_RECUPERACION__c/fields/CONCEPTO_HON_RECUP__c.field-meta.xml
<CustomField>
    <fullName>CONCEPTO_HON_RECUP__c</fullName>
    <label>CONCEPTO HON RECUP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>