unpackaged/main/default/objects/HONORARIOS_POR_RECUPERACION__c/fields/FECHA__c.field-meta.xml
<CustomField>
    <fullName>FECHA__c</fullName>
    <label>FECHA</label>
    <type>Date</type>
</CustomField>