unpackaged/main/default/objects/HONORARIOS_POR_RECUPERACION__c/fields/PCR__c.field-meta.xml
<CustomField>
    <fullName>PCR__c</fullName>
    <label>PCR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>